# Mustard-Engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build-debug.sh  build.bat  build.cmd  build.sh  genDocs.bat  mustard.bat  mustard.cmd  mustard.py  premake5.lua  revert.sh  run.cmd
docs/: CNAME  Doxyfile  Lua API Documentation.html  index.html  ldoc.master.css  luaAPI.txt  manual.md  style.css
docs/html/: aabb_8cpp.html  aabb_8cpp__incl.map  aabb_8cpp__incl.md5  aabb_8h.html  aabb_8h__dep__incl.map  aabb_8h__dep__incl.md5  aabb_8h__incl.map  aabb_8h__incl.md5  aabb_8h_source.html  annotated.html  annotated_dup.js  application_8h.html  application_8h.js  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h_source.html  asset_manager_8h.html  asset_manager_8h__dep__incl.map  asset_manager_8h__dep__incl.md5  asset_manager_8h__incl.map  asset_manager_8h__incl.md5  asset_manager_8h_source.html  audio_2audio_8cpp.html  audio_2audio_8cpp.js  audio_2audio_8cpp__incl.map  audio_2audio_8cpp__incl.md5  audio_8h.html  audio_8h__dep__incl.map  audio_8h__dep__incl.md5  audio_8h__incl.map  audio_8h__incl.md5  audio_8h_source.html  callbacks_8h.html  callbacks_8h_source.html  camera_8cpp.html  camera_8cpp__incl.map  camera_8cpp__incl.md5  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  (+878 more)
docs/html/d0/d06/: class_a_b_1_1_frustum.html  class_a_b_1_1_frustum.js
docs/html/d0/d2e/: quad_renderer_8h_source.html
docs/html/d0/d3d/: struct_a_b_1_1_mat4.html  struct_a_b_1_1_mat4.js
docs/html/d0/d4f/: class_a_b_1_1_script.html  (+1 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+107 more)
docs/luaAPI/: index.html
docs/luaAPI/modules/: audio.html  callbacks.html  collision.html  font.html  graphics.html  input.html  localization.html  math.html  system.html
docs/modules/: audio.html  callbacks.html  collision.html  font.html  graphics.html  input.html  localization.html  math.html  system.html
projectTemplate/: .gitignore  CMakeLists.txt  build-release.sh  build.bat  build.cmd  build.sh  compile.bat  premake5.lua  project.cfg  run.bat  run.sh  shell.html  upload.sh
projectTemplate/assets-WIP/gfx/: tv1.tga
projectTemplate/assets/scripts/: gameState.lua  imgui.lua  interface.lua  main.lua  serialization.lua
projectTemplate/assets/shaders/: billboard.frag  billboard.vert  default2d.frag  default2d.vert  default3d.frag  default3d.vert  fullscreenQuad.frag  fullscreenQuadTexture.frag  fullscreenQuadTextureDepth.frag  instanced2d.frag  instanced2d.vert  quadRenderer.frag  quadRenderer.vert  skybox.frag
projectTemplate/src/: main.cpp  sampleProject.cpp
src/: assetCompiler.cpp  mustard.cpp  mustard.h  pch.cpp  pch.h  types.h
src/assetCompiler/: CMakeLists.txt  assetCompiler.cpp
src/audio/: audio.cpp  audio.h
src/core/: application.h  fileSystem.cpp  fileSystem.h  localization.cpp  localization.h  log.cpp  log.h  memory.cpp  resourceManager.h  window.cpp  window.h
src/input/: gamepad.cpp  gamepad.h  input.cpp  input.h  scancodes - Copy.h  scancodes.h
src/main/: mustard.cpp  mustard.h  pch.h
src/main/audio/: audio.cpp  audio.h
src/main/core/: assetManager.h  fileSystem.cpp  fileSystem.h  localization.cpp  localization.h  log.cpp  log.h  memory.cpp  resourceManager.h  subsystem.h  version.h  window.cpp  window.h
src/main/input/: input.cpp  input.h
src/main/math/: aabb.cpp  aabb.h  frustum.cpp  frustum.h  math.cpp  math.h  matrix.cpp  matrix.h  perlin.cpp  perlin.h  plane.cpp  plane.h  quaternion.h  random.cpp  random.h  vector.cpp  vector.h
src/main/misc/: capture.cpp  console.cpp  console.h  interpolator.h  misc.h  poissonDiscSampling.cpp  poissonDiscSampling.h  profiler.cpp  ringBuffer.h
src/main/renderer/: camera.cpp  camera.h  colorTransform.h  font.cpp  font.h  image.cpp  image.h  model.cpp  model.h  palette.cpp  palette.h  particleSystem.cpp  particleSystem.h  quadRenderer.cpp  quadRenderer.h  renderLayer.cpp  renderLayer.h  renderTarget.cpp  renderTarget.h  renderer.cpp  renderer.h  shader.cpp  shader.h  skybox.cpp  skybox.h  sprite.cpp  sprite.h  spriteAtlas.cpp  spriteAtlas.h  texture.cpp  texture.h  textureCache.cpp  textureCache.h  tga.cpp  tga.h
src/main/script/: audio.cpp  callbacks.h  collision.cpp  font.cpp  graphics.cpp  input.cpp  localization.cpp  math.cpp  script.cpp  script.h  system.cpp
src/math/: math.h  matrix.cpp  matrix.h  perlin.cpp  perlin.h  quaternion.cpp  quaternion.h  random.cpp  random.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  vector.h
src/misc/: capture.cpp  capture.h  console.cpp  console.h  interpolator.h  misc.h  profiler.cpp  profiler.h  ringBuffer.h
src/platform/: desktop.cpp  desktop.h  entryPoint.h
src/platform/desktop/: CMakeLists.txt  capture.cpp  console.cpp  console.h  desktop.cpp  desktop.h  profiler.cpp  profiler.h
src/platform/web/: CMakeLists.txt  web.cpp
src/renderer/: batchRenderer.cpp  batchRenderer.h  camera.cpp  camera.h  colorTransform.h  font.cpp  font.h  geometryRenderer.cpp  geometryRenderer.h  image.cpp  image.h  model.cpp  model.h  palette.cpp  renderLayer.cpp  renderLayer.h  renderTarget.cpp  renderTarget.h  renderer.cpp  renderer.h  shader.cpp  shader.h  skybox.cpp  skybox.h  sprite.cpp  sprite.h  spriteAtalas.cpp  spriteAtlas.cpp  spriteAtlas.h  texture.cpp  textureCache.cpp  tga.cpp  tga.h
src/script/: audio.cpp  callbacks.h  collision.cpp  font.cpp  graphics.cpp  input.cpp  localization.cpp  math.cpp  script.cpp  system.cpp
src/tests/: test-matrix.cpp  test-plane-intersection.cpp  test-project-build.cpp  test-project-build.sh  test-rng  test-rng.cpp  test-rng.h  test-vector.cpp  test.cpp
(+344 files in other folders)
